[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dobot_api"
version = "3.0.1"
description = "Dobot Robot API for TCP/IP communication"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dobot", email = "support@dobot.cc"},
]
keywords = ["dobot", "robot", "tcp-ip", "api", "automation", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/haoyan-ts/TCP-IP-Python-V3"
Repository = "https://github.com/haoyan-ts/TCP-IP-Python-V3"
Documentation = "https://github.com/haoyan-ts/TCP-IP-Python-V3#readme"
"Bug Tracker" = "https://github.com/haoyan-ts/TCP-IP-Python-V3/issues"

[tool.setuptools.packages.find]
include = ["dobot_api*"]

[tool.setuptools.package-data]
dobot_api = ["files/*"]